Resume spacing fixes for responsive

--- a/src/scss/components/_resume.scss
+++ b/src/scss/components/_resume.scss
@@ -2,7 +2,6 @@
   font-size: 3rem;
   margin: 0 auto;
   letter-spacing: 0;
-
   @include sm {
     font-size: 3.8rem;
   }
@@ -19,19 +18,18 @@
 .resume-details {
   display: flex;
   flex-direction: column;
-
   @include sm {
     line-height: 2.1rem;
   }
 }
 .resume-section-title {
-  font-family: PlayfairDisplay-BlackItalic;
+  font-family: 'Playfair Display';
+  font-style: italic;
   font-size: 2rem;
   color: #555;
 }
 .role-logo {
   max-width: 12rem;
-
   filter: grayscale(1);
   &.logo-background {
     padding: 0.5rem;
@@ -41,13 +39,18 @@
 .role-title {
   font-size: 1.3rem;
   margin-bottom: 0;
-  letter-spacing: 1rem;
+  @include sm {
+    letter-spacing: 1rem;
+  }
 }
 .role-dates {
   font-size: 1rem;
   line-height: 2rem;
-  letter-spacing: 0.5rem;
   color: #979797;
+  letter-spacing: 0.1rem;
+  @include sm {
+    letter-spacing: 0.5rem;
+  }
 }
 .role-description {
   line-height: 2rem;
